# flascars

./: .gitignore  README.md  pyproject.toml  run.py
app/: __init__.py
app/controllers/: home.py
app/files/: paa_arquivo.txt
app/src/graphs/: graph.py
app/static/: graph.html  index.css
app/templates/: base.html  index.html
flascars/: config.py
tests/: test_flascars.py
